Verification response (#92)
* chore: Adapt response when user registers.

* chore: Set expiration from 1 day to 15 minutes.

* chore: Adapt error logging.

* chore: Adapt error logging.
