# openapi.yml
@@ -85,7 +85,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AuthenticationResponse'
+                $ref: '#/components/schemas/VerificationResponse'
         '409':
           description: Invalid sign-up
           content:
@@ -117,19 +117,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiError'
-  /api/v1/users/{id}/password:
+  /api/v1/user/password:
     patch:
       tags:
         - user
       summary: change user password
       operationId: changePassword
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
       requestBody:
         content:
           application/json:
@@ -141,25 +134,12 @@ paths:
           description: Updating the password was successful
           content:
             application/json: {}
-        '409':
-          description: wrong issued user ID or password used
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiError'
-  /api/v1/users/{id}/info:
+  /api/v1/user/info:
     patch:
       tags:
         - user
       summary: update user information
       operationId: updateInfo
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
       requestBody:
         content:
           application/json:
@@ -171,12 +151,6 @@ paths:
           description: Updating information was successful
           content:
             application/json: {}
-        '409':
-          description: User ID does not match ID of logged in user
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiError'
   /api/v1/tasks/{id}:
     get:
       tags:
@@ -255,6 +229,31 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiError'
+  /api/v1/auth/verify:
+    get:
+      tags:
+        - authentication
+      summary: verify user
+      operationId: verifyUser
+      parameters:
+        - name: token
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: email verification was successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/VerificationResponse'
+        '403':
+          description: Verification step not complete
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
 components:
   schemas:
     TaskCreateRequest:
@@ -274,45 +273,6 @@ components:
           type: boolean
         isTaskOpen:
           type: boolean
-        startedOn:
-          type: string
-          format: date-time
-        finishedOn:
-          type: string
-          format: date-time
-        timeInterval:
-          type: string
-        timeTaken:
-          type: integer
-          format: int32
-        priority:
-          type: string
-          enum:
-            - LOW
-            - MEDIUM
-            - HIGH
-    TaskFetchResponse:
-      required:
-        - createdOn
-        - description
-        - isReminderSet
-        - isTaskOpen
-        - priority
-        - timeInterval
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        description:
-          type: string
-        isReminderSet:
-          type: boolean
-        isTaskOpen:
-          type: boolean
-        createdOn:
-          type: string
-          format: date-time
         startedOn:
           type: string
           format: date-time
@@ -417,6 +377,45 @@ components:
         timestamp:
           type: string
           format: date-time
+    TaskFetchResponse:
+      required:
+        - createdOn
+        - description
+        - isReminderSet
+        - isTaskOpen
+        - priority
+        - timeInterval
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        description:
+          type: string
+        isReminderSet:
+          type: boolean
+        isTaskOpen:
+          type: boolean
+        createdOn:
+          type: string
+          format: date-time
+        startedOn:
+          type: string
+          format: date-time
+        finishedOn:
+          type: string
+          format: date-time
+        timeInterval:
+          type: string
+        timeTaken:
+          type: integer
+          format: int32
+        priority:
+          type: string
+          enum:
+            - LOW
+            - MEDIUM
+            - HIGH
     RegisterRequest:
       required:
         - email
@@ -439,15 +438,12 @@ components:
           type: string
         passwordConfirmation:
           type: string
-    AuthenticationResponse:
+    VerificationResponse:
       required:
-        - accessToken
-        - refreshToken
+        - message
       type: object
       properties:
-        accessToken:
-          type: string
-        refreshToken:
+        message:
           type: string
     AuthenticationRequest:
       required:
@@ -458,6 +454,16 @@ components:
         username:
           type: string
         password:
+          type: string
+    AuthenticationResponse:
+      required:
+        - accessToken
+        - refreshToken
+      type: object
+      properties:
+        accessToken:
+          type: string
+        refreshToken:
           type: string
     UserPasswordUpdateRequest:
       required:
